# android-protobuf-decoding

./: .gitignore  README.md  SMHasher  activity_recognition.proto  activity_recognition_pb2.py  addon.py  addon_IP.py  android_carrierservices.proto3  android_dialer.proto3  android_dialer_pb2.py  android_messaging.proto3  app_measurement.proto3  app_measurement_decode.py  app_measurement_pb2.py  checkin.proto  checkin_chrome.proto  checkin_chrome_pb2.py  checkin_pb2.py  compact protobuf format.txt  decoding_helpers.py  devicekeyrequesr.proto  devicekeyrequest.proto  devicekeyrequest_pb2.py  event-log-tags  example_firebase.mitm  example_firebase.old.mitm  example_firebase.txt  example_messaging.mitm  example_messaging.txt  exptsandconfigs_request.proto  exptsandconfigs_request_pb2.py  exptsandconfigs_response.proto  exptsandconfigs_response_pb2.py  firebase_logbatch.proto  firebase_logbatch_pb2.py  gboard.proto3  gboard_pb3.py  intermediatetoken.proto  intermediatetoken_pb2.py  lockbox.proto  (+32 more)
android_dialer/: proto3_pb2.py
app_measurement/: proto3_pb2.py
federated_learning_protos/: federated_api.proto
finsky_protobuf/: ack_notification_pb2.py  (+104 more)
frameworks/proto_logging/stats/enums/bluetooth/: Android.bp  BUILD.gn  enums_pb2.py
frameworks/proto_logging/stats/enums/bluetooth/a2dp/: enums_pb2.py
frameworks/proto_logging/stats/enums/bluetooth/a2dp/a2dp/: enums_pb2.py
frameworks/proto_logging/stats/enums/bluetooth/hci/: enums_pb2.py
frameworks/proto_logging/stats/enums/bluetooth/hfp/: enums_pb2.py
frameworks/proto_logging/stats/enums/bluetooth/smp/: enums_pb2.py
(+98 files in other folders)
