#
# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//common-mk/proto_library.gni")

proto_library("libbt-platform-protos-lite") {
  proto_in_dir = "."
  proto_out_dir = "frameworks/proto_logging/stats/enums/bluetooth"

  sources = [
    "a2dp/enums.proto",
    "enums.proto",
    "hci/enums.proto",
    "hfp/enums.proto",
    "smp/enums.proto",
  ]

  configs = [ "//common-mk:pic" ]
}
